# GameEngineFromScratch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
Asset/Textures/: icelogo-color.ppm  icelogo-normal.ppm
BuildScript/: build.bat  build.sh  build_crossguid.bat  build_crossguid.sh  build_libpng.bat  build_libpng.sh  build_llvm_clang.bat  build_opengex.bat  build_opengex.sh  build_zlib.bat  build_zlib.sh
Empty/: CMakeLists.txt  EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Common/: Allocator.cpp  Allocator.hpp  (+13 more)
Framework/Common/test/: AllocatorTest.cpp  CMakeLists.txt  OgexParserTest.cpp
Platform/: CMakeLists.txt
Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  D3d12Application.hpp  OpenGLApplication.cpp  OpenGLApplication.hpp  WindowsApplication.cpp  WindowsApplication.hpp  helloengine.cpp  helloengine_D2D.cpp  helloengine_win.cpp
Platform/Windows/D3D/: copy.pso  copy.vso  helloengine_D3D11.cpp  helloengine_D3D12.cpp  helloengine_D3D12_copy.cpp  vsoutput.hs
Platform/Windows/D3D/D3D11_article_11/: copy.ps  helloengine_D3D.cpp
Platform/Windows/D3D/D3D12_torus_article_16/: Mesh.h  cbuffer2.h  helloengine_D3D12.cpp  illum.hs  simple.hlsl  vsoutput2.hs
Platform/Windows/D3D/D3D12_triangle_article_15/: cbuffer.h  copy.vs  helloengine_D3D12.cpp
Platform/Windows/OpenGL/: color.ps  color.vs  helloengine_opengl.cpp
Platform/Windows/src/: D3d12Application.cpp  OpenGLApplication.cpp  WindowsApplication.cpp  WindowsApplication.hpp
Platform/Windows/test/: TextureLoadTest.cpp
RHI/: CMakeLists.txt
cmake/: PlatformDependencies.cmake
(+42 files in other folders)
